fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,7 +30,7 @@
     --fs-xxxl: 2.4rem;
 	--fs-xxl: 2.2rem;
 	--fs-xl: 1.5rem;
-    --fs-l: 1rem;
+    --fs-l: 1.2rem;
     --fs-m: 0.8rem;
     --fs-s: 0.6rem;
 
@@ -67,7 +67,7 @@
 		--fs-xxxl: 5rem;
 		--fs-xxl: 4rem;
         --fs-xl: 2rem;
-        --fs-l: 1.3rem;
+        --fs-l: 1.5rem;
         --fs-m: 1rem;
         --fs-s: 0.8rem;
     }
